--- a/contact.html
+++ b/contact.html
@@ -4,5 +4,5 @@ title:  Alexandre Bouvier | Contact
 ---
 
 <div class="inner">
-  <h1>Comment me contacter</h1>
+  <script type="text/javascript" src="https://form.jotformeu.com/jsform/91703335609356"></script>
 </div>
