--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title:  Alexandre Bouvier
 
 <div class="inner">
   <h1>Bienvenue</h1>
-  <img src="images/yeah.gif" alt="" width="100%">
+  <img src="images/jim-carrey.gif" alt="" width="100%">
   <h2 class="text-center" style="margin: 30px;"><em>Ruby on Rails Consulting</em></h2>
   <div style="margin: 30px 0">
     <p>Diplômé d'économie et gestion de la Sorbonne, j'ai travaillé dans de nombreuses start-ups du côte opérationnelles et il y'a 2 ans j'ai voulu apprendre à coder.</p>
