Update description and administrate article. Add mete data

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: default
 title:  Alexandre Bouvier
 ---
-
 <div class="inner">
-  <h1>Bienvenue</h1>
   <img src="images/jim-carrey.gif" alt="" width="100%">
-  <h2 class="text-center" style="margin: 30px;"><em>Ruby on Rails Consulting</em></h2>
+  <h1 class="text-center" style="margin: 30px;"><em>Ruby on Rails Consulting</em></h1>
   <div style="margin: 30px 0">
-    <p>Diplômé d'économie et gestion de la Sorbonne, j'ai travaillé dans de nombreuses start-ups du côte opérationnelles et il y'a 2 ans j'ai voulu apprendre à coder.</p>
-    <p>J'ai donc fait <a href="https://www.lewagon.com/"> Le Wagon </a> et depuis je suis développeur Ruby on Rails et travaille en free-lance sur de nombreux <a href="/portfolio.html"> projets </a> </p>
+    <p>
+      Diplômé d'économie et gestion de la Sorbonne, j'ai travaillé dans de nombreuses start-ups du côté opérationnelle et je suis depuis toujours passionné par le monde des starts-ups et l'informatique. J'ai commencé ma carrière chez <a href="http://www.aux-concours.com/">Aux-concours</a> puis j'ai développé UberEats à Paris. Et j'ai travaillé chez un importateur de produit alimentaire français aux USA. Pour plus de détails vous pouvez aller consulter mon <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf">CV</a>.
+    </p>
+    <p>
+      Je suis maintenant développeur et travaille en free-lance sur de nombreux <a href="/portfolio.html"> projets </a> De plus j'enseigne au <a href="https://www.lewagon.com/">Wagon</a>. Je suis capable de vous faire des MVP, comme des web-app pour gérer vos opérations.
+    </p>
   </div>
 </div>
