Refonte de la Home

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@ title:  Alexandre Bouvier
   <h1 class="text-center" style="margin: 30px;"><em>Ruby on Rails Consulting</em></h1>
   <div style="margin: 30px 0">
     <p>
-      Passionné par le monde des start-ups et de l’informatique, je me suis tourné vers des études en Économie et Gestion à La Sorbonne, Paris. Suite à l’obtention de mon diplôme j’ai travaillé du côté opérationnel dans de nombreuses start-ups. Ma carrière a commencé chez <a href="http://www.aux-concours.com/">Aux-concours.com</a> en tant que responsable e-commerce, j’ai ensuite géré les Opérations et la Logistique pour le lancement de UberEats à Paris, puis j’ai intégré une entreprise d’importation de produit français aux et depuis les USA.
+       Suite à l’obtention de mon diplôme en Économie et Gestion à La Sorbonne, j’ai travaillé du côté opérationnel dans de nombreuses start-ups. Ma carrière a commencé chez <a href="http://www.aux-concours.com/">Aux-concours.com</a> en tant que responsable e-commerce, j’ai ensuite géré les Opérations et la Logistique pour le lancement de <a href="https://www.ubereats.com/fr-FR/paris/">UberEats</a> à Paris, puis j’ai intégré une entreprise d’importation de produit français aux et depuis les USA.
     </p>
     <p>
-      Je suis maintenant développeur web et travaille en free-lance sur de nombreux projets que vous pouvez trouver <a href="/portfolio.html">ici</a>.
-      Et de plus j'enseigne Ruby on Rails au <a href="https://www.lewagon.com/">Wagon</a> dans différentes villes de France.
-      Pour plus de détails vous pouvez aller consulter mon <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf">CV</a>.
+      Passionné par le monde des start-ups et de l’informatique, je suis maintenant développeur web et travaille en free-lance sur de <a href="/portfolio.html">nombreux projets que vous pouvez trouver ici</a>.
+      Et de plus j'enseigne <a href="https://www.lewagon.com/lille">Ruby on Rails au Wagon Lille</a>.
+      Pour plus de détails, <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf">vous pouvez aller consulter mon CV ici</a>.
     </p>
     <p>
-      Si vous êtes à la recherche d’un développeur pour la réalisation d’un MVP (Minimum Viable Product) ou d’une web-app pour gérer vos opérations, n’hésitez pas à me contacter.
+      Si vous êtes à la recherche d’un développeur pour la réalisation d’un MVP (Minimum Viable Product) ou d’une web-app pour gérer vos opérations, <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/">contactez moi sur LinkedIn</a>.
     </p>
   </div>
 </div>
