--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ title:  Alexandre Bouvier
        Suite à l’obtention de mon diplôme en Économie et Gestion à La Sorbonne, j’ai travaillé du côté opérationnel dans de nombreuses start-ups. Ma carrière a commencé chez <a href="http://www.aux-concours.com/">Aux-concours.com</a> en tant que responsable e-commerce, j’ai ensuite géré les Opérations et la Logistique pour le lancement de <a href="https://www.ubereats.com/fr-FR/paris/">UberEats</a> à Paris, puis j’ai intégré une entreprise d’importation de produit français aux et depuis les USA.
     </p>
     <p>
-      Passionné par le monde des start-ups et de l’informatique, je suis maintenant développeur web et travaille en free-lance sur de <a href="/portfolio.html">nombreux projets que vous pouvez trouver ici</a>.
+      Passionné par le monde des start-ups et de l’informatique, je suis maintenant développeur web et travaille en free-lance sur de <a href="/portfolio.html">nombreux projets</a>.
       Et de plus j'enseigne <a href="https://www.lewagon.com/lille">Ruby on Rails au Wagon Lille</a>.
-      Pour plus de détails, <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf">vous pouvez aller consulter mon CV ici</a>.
+      Pour plus de détails, <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf">vous pouvez consulter mon CV</a>.
     </p>
     <p>
       Si vous êtes à la recherche d’un développeur pour la réalisation d’un MVP (Minimum Viable Product) ou d’une web-app pour gérer vos opérations, <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/">contactez moi sur LinkedIn</a>.
