front end design

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@ title:  Alexandre Bouvier
 ---
 <div class="container">
   <div class="inner">
-    <h1 class="text-center" style="margin: 30px;"><em>Dev Freelance Ruby on Rails</em></h1>
+    <div class="page-title">
+      <h1>Dev Freelance Ruby on Rails</h1>
+    </div>
     <div style="margin: 30px 0">
       <p>
-         Suite à l’obtention de mon diplôme en Économie et Gestion à La Sorbonne, j’ai travaillé du côté opérationnel dans de nombreuses start-ups. Ma carrière a commencé chez <a href="http://www.aux-concours.com/">Aux-concours.com</a> en tant que responsable e-commerce, j’ai ensuite géré les Opérations et la Logistique pour le lancement de <a href="https://www.ubereats.com/fr-FR/paris/">UberEats</a> à Paris. Ensuite j’ai intégré une entreprise d’importation de produit français aux et depuis les USA.
+         Suite à l’obtention de mon diplôme en Économie et Gestion à La Sorbonne, j’ai travaillé du côté opérationnel dans de nombreuses start-ups. Ma carrière a commencé chez <a href="http://www.aux-concours.com/" class="highlighted">Aux-concours.com</a> en tant que responsable e-commerce, j’ai ensuite géré les Opérations et la Logistique pour le lancement de <a href="https://www.ubereats.com/fr-FR/paris/" class="highlighted">UberEats</a> à Paris. Ensuite j’ai intégré une entreprise d’importation de produit français aux et depuis les USA.
       </p>
       <p>
-        Passionné par le monde des start-ups et de l’informatique, je suis maintenant développeur web et travaille en free-lance sur de nombreux <a href="/portfolio.html">projets</a>.
-        J'enseigne aussi <a href="https://www.lewagon.com/lille">Ruby on Rails au Wagon</a>.
-        Pour plus de détails, <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf">vous pouvez consulter mon CV</a>.
+        Passionné par le monde des start-ups et de l’informatique, je suis maintenant développeur web et travaille en free-lance sur de nombreux <a href="/portfolio.html" class="highlighted">projets</a>.
+        J'enseigne aussi <a href="https://www.lewagon.com/lille" class="highlighted">Ruby on Rails au Wagon</a>.
+        Pour plus de détails, <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf" class="highlighted">vous pouvez consulter mon CV</a>.
       </p>
       <p>
-        Si vous êtes à la recherche d’un développeur pour la réalisation d’un MVP (Minimum Viable Product) ou d’une web-app pour gérer vos opérations, <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/">contactez moi sur LinkedIn</a>.
+        Si vous êtes à la recherche d’un développeur pour la réalisation d’un MVP (Minimum Viable Product) ou d’une web-app pour gérer vos opérations, <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/" class="highlighted">contactez moi sur LinkedIn</a>.
       </p>
     </div>
     <img src="images/jim-carrey.gif" alt="" width="100%">
