Adds The Poplace in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@ title: Portfolio
         <li>
           <div class="portfolio">
             <a href="{{ project.link }}" target="_blank">
-              <img src="{{ project.img }}" alt="">
+              <img src="{{ project.image_path }}" alt="">
             </a>
             <div>
               <a href="{{ project.link }}" target="_blank">
