--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ title:  Alexandre Bouvier
     </div>
     <div style="margin: 30px 0">
       <p>
-         Suite à l’obtention de mon diplôme en Économie et Gestion à La Sorbonne, j’ai travaillé du côté opérationnel dans de nombreuses start-ups. Ma carrière a commencé chez <a href="http://www.aux-concours.com/" class="highlighted">Aux-concours.com</a> en tant que responsable e-commerce, j’ai ensuite géré les Opérations et la Logistique pour le lancement de <a href="https://www.ubereats.com/fr-FR/paris/" class="highlighted">UberEats</a> à Paris. Ensuite j’ai intégré une entreprise d’importation de produit français aux et depuis les USA.
+         Suite à l’obtention de mon diplôme en Économie et Gestion à La Sorbonne, j’ai travaillé dans de nombreuses start-ups du côté opérationnel. Ma carrière a commencé chez <a href="http://www.aux-concours.com/" class="highlighted">Aux-concours.com</a> en tant que responsable e-commerce. Puis j’ai intégré <a href="https://www.ubereats.com/fr-FR/paris/" class="highlighted">Uber Eats</a> pour gérer les Opérations et la Logistique. Ensuite j’ai travaillé dans une entreprise d’importation de produit alimentaires français aux USA.
       </p>
       <p>
         Passionné par le monde des start-ups et de l’informatique, je suis maintenant développeur web et travaille en free-lance sur de nombreux <a href="/portfolio.html" class="highlighted">projets</a>.
-        J'enseigne aussi <a href="https://www.lewagon.com/lille" class="highlighted">Ruby on Rails au Wagon</a>.
-        Pour plus de détails, <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf" class="highlighted">vous pouvez consulter mon CV</a> et me <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/" class="highlighted">contacter sur LinkedIn</a>.
+        J'enseigne aussi Ruby on Rails <a href="https://www.lewagon.com/lille" class="highlighted">au Wagon</a>.
+        Pour plus de détails, vous pouvez consulter mon <a href="https://alexandrebk.github.io/curriculum-vitae/curriculum-vitae.pdf" class="highlighted">CV</a> et me <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/" class="highlighted">contacter sur LinkedIn</a>.
       </p>
     </div>
     <ul class="page-blog">
@@ -47,5 +47,4 @@ title:  Alexandre Bouvier
       {% endfor %}
     </ul>
   </div>
-
 </div>
