--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title:  Alexandre Bouvier
+title:  Blog Ruby on Rails
 ---
+
 <div class="container">
   <div class="inner">
     <div class="page-title">
