Add placeholder to textarea in contat page

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@ title:  Contactez-moi
             <textarea class="form-control"
                       id="projet"
                       name="projet"
-                      rows="6">Parlez-moi de votre projet...</textarea>
+                      rows="6"
+                      placeholder="Parlez-moi de votre projet.."></textarea>
           </div>
           <input type="submit"
                  value="Envoyer"
