--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@ title:  Contactez-moi
                       placeholder="Parlez-moi de votre projet.."></textarea>
           </div>
           <input type="submit"
+                 id="submitContactFrom"
                  value="Envoyer"
                  class="btn btn-primary btn-lg w-100">
         </form>
