--- a/resources.html
+++ b/resources.html
@@ -12,7 +12,7 @@ title: Ressources Utiles
     <ul class="page-portfolio">
       {% for resource in site.data.resources %}
         <li>
-          <div class="portfolio">
+          <div class="resource">
             <div>
               <a href="{{ resource.link }}" target="_blank">
                 <h3><span class="underlined">{{ resource.title }}</span></h3>
