Removes button animation in homepage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title:  Blog Ruby on Rails
                 {{ post.description }}
               </p>
               <a href="{{ post.url }}"
-                 class="btn-green btn-animation">
+                 class="btn-green">
                 Lire l'article
               </a>
             </div>
