--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@ title: Portfolio
             </a>
             <div>
               <a href="{{ project.link }}" target="_blank">
-                <h3><span class="underlined">{{ project.title }}</span></h3>
+                <h3>{{ project.title }}</h3>
               </a>
               <p>{{ project.content }}</p>
               <p><span class="text-light-upcase">{{ project.techno }}</span></p>
