--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@ title: Ressources Utiles
           <div class="resource">
             <div>
               <a href="{{ resource.link }}" target="_blank">
-                <h3><span class="underlined">{{ resource.title }}</span></h3>
+                <h3>{{ resource.title }}</h3>
                 <p>{{ resource.content }}</p>
               </a>
             </div>
