Refacto Navbar for mobile and split blog and article in resource page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title:  Blog Ruby on Rails
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h1>Blog Ruby on Rails</h1>
+      <h1>Blog</h1>
     </div>
     <ul class="page-blog">
       {% for post in site.posts %}
