--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@ title: Portfolio
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h2>Mon Portfolio</h2>
+      <h2>Portfolio</h2>
     </div>
 
     <ul class="page-portfolio">
