--- a/resources.html
+++ b/resources.html
@@ -6,19 +6,34 @@ title: Ressources Utiles
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h2>Ressources Utiles</h2>
+      <h2>Blogs à suivre</h2>
     </div>
 
-    <ul class="page-portfolio">
+    <ul>
       {% for resource in site.data.resources %}
         <li>
           <div class="resource">
-            <div>
-              <a href="{{ resource.link }}" target="_blank">
-                <h3>{{ resource.title }}</h3>
-                <p>{{ resource.content }}</p>
-              </a>
-            </div>
+            <a href="{{ resource.link }}" target="_blank">
+              <h3>{{ resource.title }}</h3>
+              <p>{{ resource.content }}</p>
+            </a>
+          </div>
+        </li>
+      {% endfor %}
+    </ul>
+
+    <div class="page-title">
+      <h2>Articles à lire</h2>
+    </div>
+
+    <ul>
+      {% for article in site.data.articles %}
+        <li>
+          <div class="resource">
+            <a href="{{ article.link }}" target="_blank">
+              <h3>{{ article.title }}</h3>
+              <p>{{ article.content }}</p>
+            </a>
           </div>
         </li>
       {% endfor %}
