bug: Fix bug from previous commit

--- a/livres.html
+++ b/livres.html
@@ -14,7 +14,7 @@ title: Livres
         <li>
           <div class="portfolio">
             <a href="{{ book.link }}" target="_blank">
-              <img src="{{ project.image_link }}" alt="">
+              <img src="{{ book.image_link }}" alt="couverture">
             </a>
             <div>
               <a href="{{ book.link }}" target="_blank">
