--- a/resources.html
+++ b/resources.html
@@ -6,9 +6,8 @@ title: Ressources Utiles
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h2>Blogs à suivre</h2>
+      <h2>Voici des ressources pour continuer à apprendre</h2>
     </div>
-
     <ul>
       {% for resource in site.data.resources %}
         <li>
@@ -21,23 +20,5 @@ title: Ressources Utiles
         </li>
       {% endfor %}
     </ul>
-
-    <div class="page-title">
-      <h2>Articles à lire</h2>
-    </div>
-
-    <ul>
-      {% for article in site.data.articles %}
-        <li>
-          <div class="resource">
-            <a href="{{ article.link }}" target="_blank">
-              <h3>{{ article.title }}</h3>
-              <p>{{ article.content }}</p>
-            </a>
-          </div>
-        </li>
-      {% endfor %}
-    </ul>
   </div>
 </div>
-
