--- a/404.html
+++ b/404.html
@@ -16,8 +16,12 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Erreur 404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>
+    <strong>Page non trouvé(</strong>
+  </p>
+  <p>
+    <a href="/">Revenir à l'accueil</a>
+  </p>
 </div>
