--- a/cheat_sheets_index.html
+++ b/cheat_sheets_index.html
@@ -5,7 +5,7 @@ title: Index des Cheat Sheets
 
 <div class="container">
   <div class="cards">
-    {% for name in site.data.cheat_sheat %}
+    {% for name in site.data.cheat_sheats %}
       <a href="/cheat_sheets/{{ name }}">
         <div class="card-category"
              style="background-image: linear-gradient(rgba(0,0,0,0.3),
@@ -39,7 +39,9 @@ title: Index des Cheat Sheets
       <a href="/cheat_sheets/docker">docker</a>
     </div>
   </div>
+  <center>
+    <a href="https://logodix.com/">Source des logos: Logodix</a>
+  </center>
 </div>
 
 
-<a href="https://logodix.com/">Source des logos</a>
