--- a/cheat_sheet.html
+++ b/cheat_sheet.html
@@ -5,7 +5,7 @@ title: Index des Cheat Sheets
 
 <div class="container">
   <div class="cards">
-    {% assign technos = "ruby, rails, python, pandas, git, sql, docker, css" | split: ", " %}
+    {% assign technos = "ruby, rails, rspec, python, pandas, git, sql, docker, css" | split: ", " %}
     {% for techno in technos %}
       <a href="/cheat_sheets/{{ techno }}">
         <div class="card-category"
