Fixes bug on last commit

--- a/cheat_sheet.html
+++ b/cheat_sheet.html
@@ -5,7 +5,7 @@ title: Index des Cheat Sheets
 
 <div class="container">
   <div class="cards">
-    {% assign technos = "Ruby, Rails, Rspec, Css, Sql, Git, Python, Pandas, Docker" | split: ", " %}
+    {% assign technos = "ruby, rails, rspec, css, sql, git, python, pandas, docker" | split: ", " %}
     {% for techno in technos %}
       <a href="/cheat_sheets/{{ techno }}">
         <div class="card-product">
