--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@ title: Ressources Utiles
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h2>Voici des ressources pour continuer à apprendre</h2>
+      <h2>Voici des ressources pour continuer à apprendre et des outils pour améliorer son quotidien de dév.</h2>
     </div>
     <ul>
       {% for resource in site.data.resources %}
