create sysadmin cheat sheet

--- a/cheat_sheet.html
+++ b/cheat_sheet.html
@@ -5,7 +5,7 @@ title: Index des Cheat Sheets
 
 <div class="container">
   <div class="cards">
-    {% assign technos = "ruby, rails, active_record, rspec, css, sql, git, python, pandas, javascript, heroku, vim" | split: ", " %}
+    {% assign technos = "ruby, rails, active_record, rspec, css, sql, git, python, pandas, javascript, heroku, vim, adminsys" | split: ", " %}
     {% for techno in technos %}
       <a href="/cheat_sheets/{{ techno }}">
         <div class="card-product">
@@ -17,9 +17,6 @@ title: Index des Cheat Sheets
       </a>
     {% endfor %}
   </div>
-  <center>
-    <a href="https://logodix.com/">Source des images: Logodix</a>
-  </center>
 </div>
 
 
