--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@ title: Portfolio
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h2>Portfolio</h2>
+      <h1>Portfolio</h1>
     </div>
 
     <ul class="page-portfolio">
@@ -18,7 +18,7 @@ title: Portfolio
             </a>
             <div>
               <a href="{{ project.link }}" target="_blank">
-                <h3>{{ project.title }}</h3>
+                <h3>{{ project.title }} ({{ project.year }})</h3>
               </a>
               <p>{{ project.content }}</p>
               <p><span class="text-light-upcase">{{ project.techno }}</span></p>
