Update font to avoid using Google font

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@ layout: default
   <h1>Erreur 404</h1>
 
   <p>
-    <strong>Page non trouvé(</strong>
+    <strong>Page non trouvé</strong>
   </p>
   <p>
     <a href="/">Revenir à l'accueil</a>
