--- a/resources.html
+++ b/resources.html
@@ -6,13 +6,13 @@ title: Ressources Utiles
 <div class="container">
   <div class="inner">
     <div class="page-title">
-      <h2>Voici des ressources pour continuer à apprendre et des outils pour améliorer son quotidien de dév.</h2>
+      <h2>Voici des <b>ressources</b> pour continuer à apprendre et des <b>outils</b> pour améliorer son quotidien de dév.</h2>
     </div>
     {% for resource in site.data.resources %}
       <div class="resource">
         <a href="{{ resource.link }}" target="_blank">
-          <h2>{{ resource.title }}</h3>
-          <p>{{ resource.content }}</p>
+          <h3>{{ resource.content }}</h3>
+          <p><u>{{ resource.link }}</u></p>
         </a>
       </div>
     {% endfor %}
