--- a/cheat_sheet.html
+++ b/cheat_sheet.html
@@ -5,7 +5,7 @@ title: Index des Cheat Sheets
 
 <div class="container">
   <div class="cards">
-    {% assign technos = "ruby, rails, controllers, active_record, rspec, css, sql, git, python, pandas, javascript, heroku, vim, adminsys" | split: ", " %}
+    {% assign technos = "ruby, rails, controllers, active_record, rspec, css, sql, git, python, javascript, heroku" | split: ", " %}
     {% for techno in technos %}
       <a href="/cheat_sheets/{{ techno }}">
         <div class="card-product">
