--- a/cheat_sheet.html
+++ b/cheat_sheet.html
@@ -4,6 +4,11 @@ title: Index des Cheat Sheets
 ---
 
 <div class="container">
+  <div class="inner">
+    <div class="page-title">
+      <h2>Cheat Sheets</h2>
+    </div>
+  </div>
   <div class="cards">
     {% assign technos = "ruby, rails, active_record, rspec, css, sql, git, javascript, heroku" | split: ", " %}
     {% for techno in technos %}
